--- a/css/media.css
+++ b/css/media.css
@@ -632,7 +632,7 @@
 }
 
 
-/* Section */
+/* Section blog */
 
 @media (max-width: 1055px){
 
@@ -737,23 +737,59 @@
 
 /* Section our-results */
 
+@media (max-width: 1340px){
+  .results-content{
+    height: 900px;
+}
+}
+
+@media (max-width: 1200px){
+  .results-content{
+    height: 800px;
+}
+}
+
 @media (max-width: 960px){
+  .results-content{
+    height: 650px;
+}
 }
       
 @media (max-width: 768px){
+  .results-content{
+    height: 1280px;
 }
-      
+.our-results__background{
+  background: url("../images/our-results-midle.jpg") 50%/cover no-repeat ;
+  background-size: contain;
+}      
+}
+
+@media(max-width: 640px){   
+  .results-content{
+    height:  1100px;
+}
+}
+
+@media(max-width: 540px){   
+  .results-content{
+    height:  950px;
+}
+}
+
 @media(max-width: 470px){   
-  
+  .results-content{
+    height:  850px;
+}
 }
       
 @media(max-width: 390px){ 
   .results-content{
-    height: 1280px;
+    height: 650px;
 }
-  .our-results__background{
+  /* .our-results__background{
     background: url("../images/our-results-mobile.jpg") 50%/cover no-repeat ;
-}     
+}      */
 }
 
 /* Section our-clients */
