--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@
     display: block;
     position: absolute;
     box-sizing: border-box;
-    width: 320px;
+    max-width: 320px;
     bottom: 0;
     height: 5px;
     background-color: #74D6F8;
