--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,15 @@
 
 .contact-us{
     max-width: 1920px;
-    margin: 0  auto;
+    margin: 0 auto;
     background-color: #005C9D;
     /* margin-top: 5px; */
 }
 .container__contact{
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0px 15px;
+    padding: 0 15px;
+    cursor: pointer;
 }
 .contact__content{
     box-sizing: border-box;
